add additional dependencies for web development and data processing

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,13 @@ termcolor>=2.3.0
 langchain-core>=0.1.0
 langchain-community>=0.0.20
 ollama>=0.1.5
+langchain
 
 # Optional but Recommended
 typing>=3.7.4
+
+# Additional Dependencies
+fastapi
+uvicorn
+websockets
+networkx
